# physicsnemo

./: .importlinter  .markdownlint.yaml  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LLM-Context.md  Makefile  README.md  index.html  pyproject.toml  sitemap.xml  v2.0-MIGRATION-GUIDE.md
.github/: CACHE_CONTRACT.md  CODEOWNERS
.github/actions/bootstrap-cudnn-ci/: action.yml
.github/actions/setup-uv-env/: action.yml
.github/workflows/: blossom-ci.yml  github-nightly-benchmarks.yml  github-nightly-uv.yml  github-pr.yml
CODING_STANDARDS/: FUNCTIONAL_APIS.md
benchmarks/: run_benchmarks.sh
benchmarks/physicsnemo/nn/: README.md
blog/: index.html
blog/archive/2025/: index.html
blog/archive/2026/: index.html
blog/author/team/: index.html
blog/category/earth2studio/: index.html
blog/category/physicsnemo/: index.html
blog/category/physicsnemo-cfd/: index.html
blog/page/2/: index.html
blog/tags/: index.html
docs/: api_index.rst  api_models.rst  examples_index.rst  examples_newton.rst
docs/api/: physicsnemo.core.rst  physicsnemo.diffusion.rst  physicsnemo.experimental.integrations.newton.rst  physicsnemo.nn.functionals.rst  physicsnemo.sym.rst  physicsnemo.utils.rst
docs/api/datapipes/: physicsnemo.datapipes.rst
docs/api/diffusion/: introduction.rst  noise_schedulers.rst
docs/api/mesh/: sampling.rst  transformations.rst
docs/api/models/: diffusion.rst  experimental_nerd.rst  modules.rst  pointnet.rst
examples/: .markdownlint.yaml  README.md
examples/additive_manufacturing/sintering_physics/: inference.py  requirements.txt  train.py
examples/cfd/convection_diffusion_fno/: README.md  cd_pde.py  config.yaml  datapipe.py  train_cd_fno.py
examples/cfd/darcy_nested_fnos/: requirements.txt
examples/cfd/darcy_physics_informed/: README.md  darcy_physics_informed_deeponet.py  darcy_physics_informed_fno.py  requirements.txt  utils.py
examples/cfd/darcy_transolver/: config_fix.yaml  requirements.txt  train_transolver_darcy_fix.py
examples/cfd/datacenter/: inference.py  train.py  train_physics_informed.py
examples/cfd/elder_fno/: README.md  _verify_solver.py  config.yaml  datapipe.py  elder_pde.py  eval_rollout.py  train_elder_fno.py
examples/cfd/flow_reconstruction_diffusion/: train.py
examples/cfd/gray_scott_rnn/: gray_scott_rnn.py  requirements.txt
examples/cfd/lagrangian_mgn/: README.md  requirements.txt
examples/cfd/ldc_pinns/: README.md  train.py
examples/cfd/mhd_pino/: README.md  requirements.txt  train_mhd.py  train_mhd_vec_pot.py  train_mhd_vec_pot_tfno.py
examples/cfd/navier_stokes_rnn/: navier_stokes_rnn.py
examples/cfd/stokes_mgn/: pi_fine_tuning.py  pi_fine_tuning_gnn.py  train.py
examples/cfd/swe_distributed_gnn/: config_graphcast_swe.yaml
examples/cfd/swe_nonlinear_pino/: README.md  swe_nl_pde.py  train_swe_nl_pino.py
examples/functional/: README.md
examples/functional/rendering/: README.md
examples/generative/topodiff/: inference.py  train.py  train_classifier.py  train_regressor.py  utils.py
examples/geophysics/diffusion_fwi/: generate.py  train.py
examples/healthcare/bloodflow_1d_mgn/: requirements.txt
examples/healthcare/brain_anomaly_detection/: invert.py
examples/minimal/datapipes/: generate_regular_data.py  generate_variable_points_data.py  requirements.txt
examples/minimal/mesh/: README.md  tutorial_1_getting_started.ipynb  tutorial_2_operations.ipynb  tutorial_3_calculus.ipynb  tutorial_4_neighbors_spatial.ipynb  tutorial_5_quality_repair.ipynb  tutorial_6_ml_integration.ipynb  tutorial_7_domain_mesh.ipynb
examples/molecular_dynamics/lennard_jones/: lennard_jones_system.py
examples/newton/: README.md
examples/newton/diffsim/: README.md  analyze_diffsim_optimizers.py  ball_problem.py  example_diffsim_ball_surrogate_bptt.py  example_diffsim_cartpole_bptt.py  render_diffsim_rollout.py
examples/newton/gripper/: README.md  example_gripper_design.py  gripper_model.py  gripper_scene.py  gripper_workflow.py  render_gripper.py
examples/newton/nerd/: README.md  cartpole_problem.py  example_cartpole_nerd.py  (+4 more)
images/mesh/: bunny_curvature.py  car_as_graph.py  dimensional_gallery.py  drivaerml_pressure_gradient.py  drivaerml_wss.py  hero_drivaerml.py  mesh_vs_vtk_io_benchmark.py  pyproject.toml
javascripts/: mathjax.js
physicsnemo/: __init__.py
physicsnemo/core/: function_spec.py  module.py  version_check.py
physicsnemo/datapipes/: __init__.py  dataloader.py  multi_dataset.py
physicsnemo/diffusion/: __init__.py  base.py
physicsnemo/domain_parallel/: __init__.py  _shard_redistribute.py  _shard_tensor_spec.py  shard_tensor.py
physicsnemo/mesh/: README.md  __init__.py  domain_mesh.py  mesh.py
physicsnemo/models/: __init__.py  fcn_mip_plugin.py
physicsnemo/nn/: __init__.py
physicsnemo/utils/: checkpoint.py
search/: search_index.json
test/: conftest.py
test/active_learning/: test_loop.py
test/ci_tests/: check_docstring_coverage.py  header_check.py  interrogate_baseline.txt  prevent_untracked_imports.py
test/common/: fwdaccuracy.py
test/core/: test_function_spec.py  test_registry.py  test_version_check.py
test/datapipes/: test_bsms.py  test_climate.py  test_domino_datapipe.py  test_healpix.py  test_healpix_couple.py
test/diffusion/: conftest.py  helpers.py  test_dps_guidance.py  test_losses.py  test_multi_diffusion_losses.py  test_multi_diffusion_models.py  test_multi_diffusion_predictor.py  test_multi_diffusion_sampling.py  test_noise_schedulers.py  test_patching.py  test_preconditioners.py  test_samplers.py  test_solvers.py  test_wrappers.py
test/distributed/: test_manager.py
test/domain_parallel/: conftest.py  test_compile.py  test_function_registration.py  test_grad_sharding.py  test_initialization.py
test/mesh/: conftest.py  test_domain_mesh_transforms.py
test/models/: test_entrypoints.py  test_fcn_mip_plugin.py
test/nn/: test_embedding_layers.py
test/optim/: test_combined_optimizer.py
test/utils/: test_checkpoint.py  test_checkpoint_distributed.py  test_mesh_utils.py  test_msc_public_read.py  test_profiler.py
(+937 files in other folders)
